--- a/package.json
+++ b/package.json
@@ -50,5 +50,19 @@
     "*.{json,md}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "@backstage/config": "^1.1.0",
+    "axios": "^1.5.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dockerode": "^3.3.5",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "react-loading": "^2.0.3",
+    "react-toastify": "^9.1.3",
+    "simple-git": "^3.19.1",
+    "url": "^0.11.3",
+    "uuid": "^9.0.1"
   }
 }
