--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "plugins/*/src",
     "plugins/*/dev",
     "plugins/*/migrations"
-  ],
+, "app.controller.js"  ],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "outDir": "dist-types",
